[gd_scene load_steps=11 format=3 uid="uid://b0w820dulgunt"]

[ext_resource type="Script" uid="uid://qbgpoqjrvtdi" path="res://instances/users/pnl_rs_user.gd" id="1_vc4pp"]
[ext_resource type="PackedScene" uid="uid://dpc8qa00yqwrs" path="res://instances/users/pnl_twitch_user_info.tscn" id="2_pux1v"]
[ext_resource type="PackedScene" uid="uid://bs6ykrldkscgn" path="res://instances/users/pnl_user_stats.tscn" id="3_my1fj"]
[ext_resource type="PackedScene" uid="uid://b7ncd0t37xkj5" path="res://instances/users/pnl_user_promo.tscn" id="3_pux1v"]
[ext_resource type="PackedScene" uid="uid://d2aoepdqbkr13" path="res://instances/users/pnl_user_customization.tscn" id="4_pux1v"]
[ext_resource type="PackedScene" uid="uid://blvbbujltlmrb" path="res://instances/users/pnl_user_games.tscn" id="5_umsy5"]
[ext_resource type="Texture2D" uid="uid://c2bfapbqs6yn8" path="res://ui/icons/bootstrap_icons/floppy-fill.png" id="6_wohka"]
[ext_resource type="Texture2D" uid="uid://dyvulwkiqobgx" path="res://ui/icons/bootstrap_icons/arrow-through-heart-fill.png" id="7_d1l5p"]
[ext_resource type="Texture2D" uid="uid://bl85mbqfcw114" path="res://ui/icons/bootstrap_icons/filetype-json.png" id="8_5yi8w"]
[ext_resource type="Texture2D" uid="uid://j610yfm3clvy" path="res://ui/icons/bootstrap_icons/heartbreak-fill.png" id="9_akubr"]

[node name="pnl_rs_user" type="PanelContainer"]
offset_right = 1327.0
offset_bottom = 903.0
script = ExtResource("1_vc4pp")
metadata/_tab_index = 0

[node name="bg_img" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="pnl_twitch_user_info" parent="vb/hb" instance=ExtResource("2_pux1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_user_promo" parent="vb/hb" instance=ExtResource("3_pux1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_user_customization" parent="vb" instance=ExtResource("4_pux1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="hb2" type="HBoxContainer" parent="vb"]
layout_mode = 2
size_flags_vertical = 3

[node name="pnl_user_stats" parent="vb/hb2" instance=ExtResource("3_my1fj")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_games" parent="vb/hb2" instance=ExtResource("5_umsy5")]
unique_name_in_owner = true
layout_mode = 2

[node name="hb_tools" type="HBoxContainer" parent="vb"]
unique_name_in_owner = true
layout_mode = 2

[node name="btn_save" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"
icon = ExtResource("6_wohka")
expand_icon = true

[node name="btn_reload" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reload from file"
icon = ExtResource("7_d1l5p")
expand_icon = true

[node name="btn_open_file" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open user file"
icon = ExtResource("8_5yi8w")
expand_icon = true

[node name="btn_delete" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete user"
icon = ExtResource("9_akubr")
expand_icon = true

[connection signal="pressed" from="vb/hb_tools/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_reload" to="." method="_on_btn_reload_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_open_file" to="." method="_on_btn_open_file_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_delete" to="." method="_on_btn_delete_pressed"]
